<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="cell"
            type="com.farmer.open9527.meeting.main.login.CodeLoginCell" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_30"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/meeting__login_verification_code"
            android:textColor="@color/meeting__text_title__color"
            android:textSize="@dimen/font_24"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_mobile"
            android:layout_width="@dimen/size_0"
            android:layout_height="@dimen/size_64"
            android:layout_marginTop="@dimen/size_30"
            android:layout_marginEnd="@dimen/size_30"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/meeting__login_mobile_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true"
            android:text="@={cell.valueMobile}"
            android:textColor="@color/meeting__text_title__color"
            android:textColorHint="@color/meeting__text_content__color"
            android:textSize="@dimen/font_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <!--
         "bindCountdownViewTotalTime",
                    "bindCountdownViewStart",
                    "bindTextViewSelectStop"-->
        <com.farmer.open9527.common.widget.CountdownView
            android:id="@+id/bt_get_code"
            bindCountdownViewStart="@{cell.valueCountdownStart}"
            bindCountdownViewStop="@{cell.valueCountdownStop}"
            bindCountdownViewTotalTime="@{60}"
            bindViewClick="@{v->cell.onCellClick(v,cell)}"
            bindViewClickViewScale="@{true}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/meeting__login_get_verification_code"
            android:textColor="@color/meeting__text_title__color"
            android:textSize="@dimen/font_16"
            app:layout_constraintBottom_toBottomOf="@+id/et_mobile"
            app:layout_constraintEnd_toEndOf="@+id/et_mobile"
            app:layout_constraintTop_toTopOf="@+id/et_mobile" />


        <View
            android:layout_width="@dimen/size_0"
            android:layout_height="@dimen/space_1"
            android:background="@color/meeting__line_bg__color"
            app:layout_constraintBottom_toBottomOf="@+id/et_mobile"
            app:layout_constraintEnd_toEndOf="@+id/et_mobile"
            app:layout_constraintStart_toStartOf="@+id/et_mobile" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_code"
            android:layout_width="@dimen/size_0"
            android:layout_height="@dimen/size_64"
            android:layout_marginTop="@dimen/size_30"
            android:layout_marginEnd="@dimen/size_30"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/meeting__login_verification_code_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:text="@={cell.valuePassword}"
            android:textColor="@color/meeting__text_title__color"
            android:textColorHint="@color/meeting__text_content__color"
            android:textSize="@dimen/font_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/et_mobile" />


        <View
            android:layout_width="@dimen/size_0"
            android:layout_height="@dimen/space_1"
            android:background="@color/meeting__line_bg__color"
            app:layout_constraintBottom_toBottomOf="@+id/et_code"
            app:layout_constraintEnd_toEndOf="@+id/et_code"
            app:layout_constraintStart_toStartOf="@+id/et_code" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            bindDrawableRadius="@{4}"
            bindDrawableSolidColor="@{@color/meeting__primary__color}"
            bindViewClick="@{v->cell.onCellClick(v,cell)}"
            bindViewClickViewScale="@{true}"
            android:layout_width="@dimen/size_0"
            android:layout_height="@dimen/size_48"
            android:layout_marginStart="@dimen/size_30"
            android:layout_marginTop="@dimen/size_30"
            android:layout_marginEnd="@dimen/size_30"
            android:gravity="center"
            android:minWidth="@dimen/size_0"
            android:minHeight="@dimen/size_0"
            android:text="@string/meeting__login"
            android:textColor="@color/meeting__white__color"
            android:textSize="@dimen/font_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_code"
            tools:background="@color/meeting__primary__color" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_select"
            bindImageViewResource="@{cell.valueRes}"
            bindImageViewSelect="@{cell.valueSelect}"
            bindImageViewSelectResource="@{cell.valueSelectRes}"
            bindViewClick="@{v->cell.onCellClick(v,cell)}"
            android:layout_width="@dimen/size_12"
            android:layout_height="@dimen/size_12"
            android:layout_marginTop="@dimen/size_20"
            android:src="@drawable/meeting_login_select__icon"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_10"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/meeting__login_protocol"
            android:textColor="@color/meeting__text_content__color"
            android:textSize="@dimen/font_12"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_select"
            app:layout_constraintStart_toEndOf="@+id/iv_select"
            app:layout_constraintTop_toTopOf="@+id/iv_select" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_switch"
            bindDrawableRadius="@{34}"
            bindDrawableSolidColor="@{@color/transparent}"
            bindDrawableStrokeColor="@{@color/meeting__primary__color}"
            bindDrawableStrokeWidth="@{1}"
            bindViewClick="@{v->cell.onCellClick(v,cell)}"
            bindViewClickViewScale="@{true}"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_34"
            android:layout_marginTop="@dimen/size_20"
            android:gravity="center"
            android:minWidth="@dimen/size_0"
            android:minHeight="@dimen/size_0"
            android:paddingStart="@dimen/size_30"
            android:paddingTop="@dimen/size_4"
            android:paddingEnd="@dimen/size_30"
            android:paddingBottom="@dimen/size_4"
            android:text="@string/meeting__login_account_password"
            android:textColor="@color/meeting__primary__color"
            android:textSize="@dimen/font_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_protocol" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>